# laboratorio2

./: pyproject.toml
.github/workflows/: ci.yml
src/mypackage/: _init_.py  calculator.py
tests/: test_calculator.py
